# actix-backend-template

./: Cargo.toml  Makefile  README.md  diesel.toml  docker-compose.yaml
.patched/diesel-async/: .cargo_vcs_info.json  Cargo.toml
.patched/diesel-async/src/pg/: mod.rs
src/: config.rs  initiator.rs  main.rs  mod.rs
src/internal/: mod.rs
src/internal/constant/: errors.rs  mod.rs
src/internal/constant/models/: user_models.rs
src/internal/handler/: mod.rs  user_handler.rs
src/internal/handler/middleware/: middleware.rs  mod.rs
src/internal/handler/user_handler/: handler.rs  mod.rs  user_handler.rs
src/internal/module/: mod.rs  user_service.rs
src/internal/module/user_service/: mod.rs
src/internal/platform/: logger.rs
src/internal/routes/: mod.rs  routes.rs
src/internal/storage/: mod.rs  user_storage.rs
src/internal/storage/user_storage/: mod.rs
